[gd_scene load_steps=14 format=3 uid="uid://ddlfij2ghida2"]

[ext_resource type="Script" path="res://scenes/plating_screen.gd" id="1_ebmj5"]
[ext_resource type="Texture2D" uid="uid://b5iqsqpg513r0" path="res://assets/CONVEYER_BELT.svg" id="2_xlgi4"]
[ext_resource type="PackedScene" uid="uid://7p0hiou31hvy" path="res://scenes/arm.tscn" id="7_5vehc"]
[ext_resource type="Script" path="res://scenes/DishSpawner.gd" id="8_7sonv"]
[ext_resource type="Script" path="res://scenes/DishDoneBoundary.gd" id="9_g40te"]
[ext_resource type="Script" path="res://scenes/OrderCreator.gd" id="10_gie43"]
[ext_resource type="Texture2D" uid="uid://ci7hidq471wwn" path="res://assets/ice-cream/bucket.png" id="10_rn2rc"]
[ext_resource type="Texture2D" uid="uid://b2vd68jh4qdxj" path="res://assets/ui/HEART_FULL.svg" id="11_shn2n"]
[ext_resource type="Script" path="res://scenes/OrderChecker.gd" id="11_vvbne"]
[ext_resource type="Script" path="res://scenes/BucketManager.gd" id="12_1qpeg"]
[ext_resource type="Texture2D" uid="uid://b1g4mjandw03k" path="res://assets/ui/DISHES_COMPLETE_HUD.svg" id="13_qcccd"]
[ext_resource type="PackedScene" uid="uid://kwn52rs7xqc" path="res://scenes/bucket.tscn" id="14_xpari"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ljdgw"]
normal = Vector2(-1, 0)

[node name="PlatingScreen" type="Node2D"]
script = ExtResource("1_ebmj5")

[node name="ConveyerBelt" type="Sprite2D" parent="."]
position = Vector2(961, 541)
texture = ExtResource("2_xlgi4")

[node name="Heart1" type="Sprite2D" parent="."]
position = Vector2(124.333, 140)
scale = Vector2(0.222222, 0.222222)
texture = ExtResource("11_shn2n")

[node name="Heart2" type="Sprite2D" parent="."]
position = Vector2(259.333, 188)
scale = Vector2(0.222222, 0.222222)
texture = ExtResource("11_shn2n")

[node name="Heart3" type="Sprite2D" parent="."]
position = Vector2(412.333, 216)
scale = Vector2(0.222222, 0.222222)
texture = ExtResource("11_shn2n")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Dishes Complete HUD" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.779
anchor_right = 1.0
anchor_bottom = 0.255
grow_horizontal = 0
texture = ExtResource("13_qcccd")
expand_mode = 1
stretch_mode = 5

[node name="CenterContainer" type="CenterContainer" parent="Control/Dishes Complete HUD"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.148
anchor_top = 0.334
anchor_right = 0.852
anchor_bottom = 0.852
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Dishes Complete HUD/CenterContainer"]
layout_mode = 2

[node name="Number" type="Label" parent="Control/Dishes Complete HUD/CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "0"

[node name="Slash" type="Label" parent="Control/Dishes Complete HUD/CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "/"

[node name="OutOf" type="Label" parent="Control/Dishes Complete HUD/CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "0"

[node name="Bucket" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 1576.0
offset_top = 770.0
offset_right = 2494.0
offset_bottom = 1670.0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("10_rn2rc")

[node name="BucketManager" type="Node" parent="Control"]
script = ExtResource("12_1qpeg")

[node name="VanillaBucket" parent="Control/BucketManager" instance=ExtResource("14_xpari")]

[node name="PistachioBucket" parent="Control/BucketManager" instance=ExtResource("14_xpari")]
flavor = "pistachio"

[node name="StrawberryBucket" parent="Control/BucketManager" instance=ExtResource("14_xpari")]
flavor = "strawberry"

[node name="ChocolateBucket" parent="Control/BucketManager" instance=ExtResource("14_xpari")]
flavor = "chocolate"

[node name="BlueberryBucket" parent="Control/BucketManager" instance=ExtResource("14_xpari")]
flavor = "blueberry"

[node name="Arm" parent="." instance=ExtResource("7_5vehc")]

[node name="DishSpawner" type="Node2D" parent="."]
position = Vector2(-194, 535)
script = ExtResource("8_7sonv")

[node name="DishDoneBoundary" type="Area2D" parent="."]
position = Vector2(414, 534)
script = ExtResource("9_g40te")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DishDoneBoundary"]
shape = SubResource("WorldBoundaryShape2D_ljdgw")

[node name="OrderCreator" type="Node" parent="."]
script = ExtResource("10_gie43")

[node name="OrderChecker" type="Node" parent="."]
script = ExtResource("11_vvbne")

[connection signal="dish_spawned" from="DishSpawner" to="OrderChecker" method="_on_dish_spawned"]
[connection signal="body_entered" from="DishDoneBoundary" to="DishDoneBoundary" method="_on_body_entered"]
[connection signal="order_created" from="OrderCreator" to="DishSpawner" method="_on_order_created"]
